fix: overflow in callout (#61)

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -179,6 +179,7 @@ table {
   margin-top: 4px;
   margin-bottom: 4px;
   padding: 3px 0px;
+  word-break:break-all;
 }
 
 .callout-container > .callout-icon {
